# ash

./: .gitignore  LICENSE  Makefile  README.md  main.c
src/: common.h  main.c  meson.build
src/command/: command.h  ls.c  meson.build
